--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -126,4 +126,66 @@ month={June},}
  acmid = {2591307},
  publisher = {USENIX Association},
  address = {Berkeley, CA, USA},
+}
+
+@inproceedings{p10,
+ author = {Xiaochen, Tian and Rocki, Kamil and Suda, Reiji},
+ title = {Register Level Sort Algorithm on Multi-core SIMD Processors},
+ booktitle = {Proceedings of the 3rd Workshop on Irregular Applications: Architectures and Algorithms},
+ series = {IA3 '13},
+ year = {2013},
+ isbn = {978-1-4503-2503-5},
+ location = {Denver, Colorado},
+ pages = {9:1--9:8},
+ articleno = {9},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2535753.2535762},
+ doi = {10.1145/2535753.2535762},
+ acmid = {2535762},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {SIMD, Xeon Phi, irregular, parallel, register, sort},
+}
+
+@inproceedings{p11, 
+author={T. Hayes and O. Palomar and O. Unsal and A. Cristal and M. Valero}, 
+booktitle={2015 IEEE 21st International Symposium on High Performance Computer Architecture (HPCA)}, 
+title={VSR sort: A novel vectorised sorting algorithm amp; architecture extensions for future microprocessors}, 
+year={2015}, 
+pages={26-38}, 
+keywords={digital arithmetic;microprocessor chips;parallel architectures;sorting;SIMD instructions;SIMD support;VSR sort;architecture extensions;future microprocessors;hardware structure;microprocessor generations;next-best vectorised sorting algorithm;radix sort;simulation framework;single instruction-multiple data instructions;vectorised noncomparative sorting algorithm;Acceleration;Hardware;Microarchitecture;Microprocessors;Registers;Sorting;Vectors}, 
+doi={10.1109/HPCA.2015.7056019}, 
+ISSN={1530-0897}, 
+month={Feb},}
+
+@article{p12,
+ author = {Inoue, Hiroshi and Taura, Kenjiro},
+ title = {SIMD- and Cache-friendly Algorithm for Sorting an Array of Structures},
+ journal = {Proc. VLDB Endow.},
+ issue_date = {July 2015},
+ volume = {8},
+ number = {11},
+ month = jul,
+ year = {2015},
+ issn = {2150-8097},
+ pages = {1274--1285},
+ numpages = {12},
+ url = {http://dx.doi.org/10.14778/2809974.2809988},
+ doi = {10.14778/2809974.2809988},
+ acmid = {2809988},
+ publisher = {VLDB Endowment},
 } 
+
+@article{p13,
+  TITLE = {{A Novel Hybrid Quicksort Algorithm Vectorized using AVX-512 on Intel Skylake}},
+  AUTHOR = {Bramas, Berenger},
+  URL = {https://hal.inria.fr/hal-01512970},
+  JOURNAL = {{International Journal of Advanced Computer Science and Applications (IJACSA)}},
+  YEAR = {2017},
+  MONTH = Nov,
+  DOI = {10.14569/IJACSA.2017.081044},
+  KEYWORDS = {Skylake ; AVX- 512 ; sort ; vectorization ; AVX-512 ; Quicksort ; Bitonic ; SIMD},
+  PDF = {https://hal.inria.fr/hal-01512970/file/Paper_44-A_Novel_Hybrid_Quicksort_Algorithm_Vectorized.pdf},
+  HAL_ID = {hal-01512970},
+  HAL_VERSION = {v2},
+}
